--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,8 +1,27 @@
 {% extends "base.html" %}
 
 {% block content %}
+<script>
+    console.log('Dashboard template rendering');
+    console.log('Week dates:', {{ week_dates|tojson|safe }});
+    console.log('Lunch options:', {{ lunch_options|tojson|safe }});
+    console.log('Orders:', {{ orders|tojson|safe }});
+    console.log('Cart:', {{ cart|tojson|safe }});
+    console.log('Ordering closed:', {{ ordering_closed|tojson|safe }});
+    console.log('Location:', {
+        name: '{{ location.name }}',
+        display_name: '{{ location.display_name }}',
+        timezone: '{{ location.timezone }}',
+        cutoff_time: '{{ "%02d"|format(location.ordering_cutoff.hour) }}:{{ "%02d"|format(location.ordering_cutoff.minute) }}'
+    });
+</script>
+
 <div class="row">
     <div class="col-md-12">
+        <div class="alert alert-info">
+            <i class="bi bi-geo-alt"></i> {{ location.display_name }} - Orders close at {{ "%02d"|format(location.ordering_cutoff.hour) }}:{{ "%02d"|format(location.ordering_cutoff.minute) }} local time
+        </div>
+        
         <ul class="nav nav-tabs" id="dashboardTabs" role="tablist">
             <li class="nav-item" role="presentation">
                 <button class="nav-link {% if request.args.get('tab') != 'create' and request.args.get('tab') != 'cart' %}active{% endif %}" 
@@ -29,32 +48,31 @@
             <div class="tab-pane fade {% if request.args.get('tab') != 'create' and request.args.get('tab') != 'cart' %}show active{% endif %}" 
                  id="view" role="tabpanel">
                 <div class="table-responsive">
-                    <table class="table">
+                    <table class="table table-striped">
                         <thead>
                             <tr>
                                 <th>Date</th>
-                                <th>Day</th>
-                                <th>Restaurant</th>
                                 <th>Order</th>
                             </tr>
                         </thead>
                         <tbody>
                             {% for date in week_dates %}
-                                {% set date_str = date.strftime('%Y-%m-%d') %}
-                                {% if date_str in orders %}
-                                    <tr>
-                                        <td>{{ date.strftime('%Y-%m-%d') }}</td>
-                                        <td>{{ date.strftime('%A') }}</td>
-                                        <td>{{ lunch_options[date_str].restaurant }}</td>
-                                        <td>
-                                            {% for meal in lunch_options[date_str].meals %}
-                                                {% if meal.type == orders[date_str] %}
-                                                    {{ meal.name }}
-                                                {% endif %}
-                                            {% endfor %}
-                                        </td>
-                                    </tr>
-                                {% endif %}
+                            <tr>
+                                <td>{{ date.strftime('%A, %B %d') }}</td>
+                                <td>
+                                    {% if date.strftime('%Y-%m-%d') in orders %}
+                                        {% set date_str = date.strftime('%Y-%m-%d') %}
+                                        {% set meal_type = orders[date_str] %}
+                                        {% for meal in lunch_options[date_str].meals %}
+                                            {% if meal.type == meal_type %}
+                                                {{ meal.name }}
+                                            {% endif %}
+                                        {% endfor %}
+                                    {% else %}
+                                        No order placed
+                                    {% endif %}
+                                </td>
+                            </tr>
                             {% endfor %}
                         </tbody>
                     </table>
