--- a/templates/cart.html
+++ b/templates/cart.html
@@ -12,12 +12,20 @@
                             <th>Day</th>
                             <th>Restaurant</th>
                             <th>Selection</th>
+                            <th>Price</th>
                             <th>Action</th>
                         </tr>
                     </thead>
                     <tbody id="cart-items">
                         <!-- Cart items will be populated by JavaScript -->
                     </tbody>
+                    <tfoot>
+                        <tr class="table-secondary">
+                            <td colspan="4" class="text-end"><strong>Total:</strong></td>
+                            <td id="cart-total" class="text-end"><strong>$0.00</strong></td>
+                            <td></td>
+                        </tr>
+                    </tfoot>
                 </table>
             </div>
             <div id="cart-buttons" class="mt-3" style="display: none;">
