add cppnow logo to corner

--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,10 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-            <a class="navbar-brand" href="{{ url_for('index') }}">Lunch Ordering</a>
+            <a class="navbar-brand" href="{{ url_for('dashboard') }}">
+                <img src="{{ url_for('static', filename=location.icon) }}" alt="{{ location.display_name }}" height="30" class="me-2">
+                {{ location.display_name }}
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
