right justify the price header

--- a/templates/cart.html
+++ b/templates/cart.html
@@ -11,9 +11,9 @@
                             <th>Date</th>
                             <th>Day</th>
                             <th>Restaurant</th>
-                            <th>Selection</th>
-                            <th>Price</th>
-                            <th>Action</th>
+                            <th>Meal</th>
+                            <th class="text-end">Price</th>
+                            <th>Actions</th>
                         </tr>
                     </thead>
                     <tbody id="cart-items">
