--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 <div class="row justify-content-center">
     <div class="col-md-8 text-center">
         <h1 class="display-4 mb-4">Welcome to Lunch Ordering</h1>
-        <p class="lead">Order your lunch for the week ahead. Choose from beef, chicken, pork, or veggie options.</p>
+        <p class="lead">Order a delivered lunch for any day of the conference</p>
         <div class="mt-4">
             <a href="{{ url_for('login') }}" class="btn btn-primary btn-lg me-2">Login</a>
             <a href="{{ url_for('register') }}" class="btn btn-outline-primary btn-lg">Register</a>
