--- a/templates/base.html
+++ b/templates/base.html
@@ -71,20 +71,8 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
-        // Initialize cart from server data
-        const cart = {{ cart|tojson|safe }};
-        const lunchOptions = {{ lunch_options|tojson|safe }};
-        
-        function updateCartDisplay() {
-            const cartCount = document.getElementById('cart-count');
-            if (cartCount) {
-                cartCount.textContent = Object.keys(cart).length;
-            }
-        }
-        
-        // Update cart count on page load
-        updateCartDisplay();
-    </script>
+    <script id="cart-data" type="application/json">{{ g.cart|tojson|safe }}</script>
+    <script id="lunch-options-data" type="application/json">{{ g.lunch_options|tojson|safe }}</script>
+    <script src="{{ url_for('serve_js', filename='cart.js') }}"></script>
 </body>
 </html> 
