--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -24,7 +24,7 @@
         
         <ul class="nav nav-tabs" id="dashboardTabs" role="tablist">
             <li class="nav-item" role="presentation">
-                <button class="nav-link {% if request.args.get('tab') != 'create' %}active{% endif %}" 
+                <button class="nav-link {% if request.args.get('tab') != 'create' and request.args.get('tab') != 'confirmations' %}active{% endif %}" 
                         id="view-tab" data-bs-toggle="tab" data-bs-target="#view" type="button" role="tab">
                     View Orders
                 </button>
@@ -35,11 +35,17 @@
                     Create New Order
                 </button>
             </li>
+            <li class="nav-item" role="presentation">
+                <button class="nav-link {% if request.args.get('tab') == 'confirmations' %}active{% endif %}" 
+                        id="confirmations-tab" data-bs-toggle="tab" data-bs-target="#confirmations" type="button" role="tab">
+                    Past Confirmations
+                </button>
+            </li>
         </ul>
         
         <div class="tab-content mt-3" id="dashboardTabsContent">
             <!-- View Orders Tab -->
-            <div class="tab-pane fade {% if request.args.get('tab') != 'create' %}show active{% endif %}" 
+            <div class="tab-pane fade {% if request.args.get('tab') != 'create' and request.args.get('tab') != 'confirmations' %}show active{% endif %}" 
                  id="view" role="tabpanel">
                 <div class="table-responsive">
                     <table class="table table-striped">
@@ -136,6 +142,45 @@
                     </div>
                     <button type="submit" class="btn btn-primary">Add to Cart</button>
                 </form>
+            </div>
+            
+            <!-- Past Confirmations Tab -->
+            <div class="tab-pane fade {% if request.args.get('tab') == 'confirmations' %}show active{% endif %}" 
+                 id="confirmations" role="tabpanel">
+                <div class="mt-4">
+                    {% if confirmations %}
+                        <div class="table-responsive">
+                            <table class="table table-hover">
+                                <thead>
+                                    <tr>
+                                        <th>Date</th>
+                                        <th>Location</th>
+                                        <th>Meal</th>
+                                        <th>Actions</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    {% for confirmation in confirmations %}
+                                    <tr>
+                                        <td>{{ confirmation.date.strftime('%B %d, %Y') }}</td>
+                                        <td>{{ location.display_name }}</td>
+                                        <td>{{ confirmation.meal_name }}</td>
+                                        <td>
+                                            <a href="{{ url_for('print_confirmation', payment_intent_id=confirmation.payment_intent_id) }}" class="btn btn-sm btn-primary">
+                                                <i class="bi bi-printer"></i> Print
+                                            </a>
+                                        </td>
+                                    </tr>
+                                    {% endfor %}
+                                </tbody>
+                            </table>
+                        </div>
+                    {% else %}
+                        <div class="alert alert-info">
+                            <i class="bi bi-info-circle"></i> You don't have any past confirmations yet.
+                        </div>
+                    {% endif %}
+                </div>
             </div>
         </div>
     </div>
