title: Lunch Ordering System

--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
         <div class="container">
             <a class="navbar-brand" href="{{ url_for('index') }}">
                 <img src="{{ url_for('static', filename=location.icon) }}" alt="{{ location.display_name }}" height="30" class="me-2">
-                {{ location.display_name }}
+                Lunch Ordering System
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
