--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -153,18 +153,24 @@
                             <table class="table table-hover">
                                 <thead>
                                     <tr>
-                                        <th>Date</th>
-                                        <th>Location</th>
-                                        <th>Meal</th>
+                                        <th>Dates</th>
+                                        <th>Meals</th>
                                         <th>Actions</th>
                                     </tr>
                                 </thead>
                                 <tbody>
                                     {% for confirmation in confirmations %}
                                     <tr>
-                                        <td>{{ confirmation.date.strftime('%B %d, %Y') }}</td>
-                                        <td>{{ location.display_name }}</td>
-                                        <td>{{ confirmation.meal_name }}</td>
+                                        <td>
+                                            {% for date in confirmation.dates %}
+                                                {{ date }}{% if not loop.last %}<br>{% endif %}
+                                            {% endfor %}
+                                        </td>
+                                        <td>
+                                            {% for meal in confirmation.meals %}
+                                                {{ meal }}{% if not loop.last %}<br>{% endif %}
+                                            {% endfor %}
+                                        </td>
                                         <td>
                                             <a href="{{ url_for('print_confirmation', payment_intent_id=confirmation.payment_intent_id) }}" class="btn btn-sm btn-primary">
                                                 <i class="bi bi-printer"></i> Print
