--- a/templates/cart.html
+++ b/templates/cart.html
@@ -54,45 +54,5 @@
     {% endif %}
 </div>
 
-<script>
-document.addEventListener('DOMContentLoaded', function() {
-    // Clear cart functionality
-    document.getElementById('clear-cart').addEventListener('click', function() {
-        if (confirm('Are you sure you want to clear your cart?')) {
-            fetch('/clear_cart', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json',
-                }
-            })
-            .then(response => response.json())
-            .then(data => {
-                if (data.success) {
-                    window.location.reload();
-                }
-            });
-        }
-    });
-
-    // Remove item functionality
-    document.querySelectorAll('.remove-item').forEach(button => {
-        button.addEventListener('click', function() {
-            const date = this.dataset.date;
-            fetch('/remove_from_cart', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json',
-                },
-                body: JSON.stringify({ date: date })
-            })
-            .then(response => response.json())
-            .then(data => {
-                if (data.success) {
-                    window.location.reload();
-                }
-            });
-        });
-    });
-});
-</script>
+<script src="{{ url_for('static', filename='js/cart.js') }}"></script>
 {% endblock %} 
