make the dates/days consistent

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -52,6 +52,7 @@
                         <thead>
                             <tr>
                                 <th>Date</th>
+                                <th>Day</th>
                                 <th>Order</th>
                             </tr>
                         </thead>
